--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[App Name]</title>
+    <link rel="stylesheet" href="/build/bundle.css" />
   </head>
   <body>
     <div id="root"></div>
